fixed log text overflow, added sample images

--- a/GitHubChecker/static/GitChecker/styles.css
+++ b/GitHubChecker/static/GitChecker/styles.css
@@ -274,6 +274,7 @@ body {
     display: inline-block;
     max-width: 80%; 
     word-wrap: break-word;
+    word-break: break-all;
     margin-top: 5px;
     margin-bottom: 5px;
 }
